demo-application/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-application-app
  labels:
    app: demo-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-application
  template:
    metadata:
      labels:
        app: demo-application
    spec:
      containers:
        - name: demo-application
          image: image-registry.openshift-image-registry.svc:5000/demo-application/demo-application:f325df96a4ab6a296d3d6957d501886b166b0331
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
